--- a/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
+++ b/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
@@ -144,22 +144,25 @@
         <!--Country View Controller-->
         <scene sceneID="6Ag-Ke-kKL">
             <objects>
-                <viewController storyboardIdentifier="CountryViewController" id="QTl-k3-FUd" customClass="CountryViewController" customModule="SpiralPay" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CountryViewController" automaticallyAdjustsScrollViewInsets="NO" id="QTl-k3-FUd" customClass="CountryViewController" customModule="SpiralPay" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oZS-zI-Xyd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gjm-z1-S9r">
-                                <rect key="frame" x="20" y="20" width="280" height="30"/>
+                                <rect key="frame" x="20" y="25" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="LrC-n0-QFj"/>
                                 </constraints>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.19607843137254902" green="0.19607843137254902" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="QTl-k3-FUd" id="Flj-YF-9a4"/>
+                                </connections>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="O5h-mu-dr0">
-                                <rect key="frame" x="0.0" y="50" width="320" height="518"/>
+                                <rect key="frame" x="0.0" y="60" width="320" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CountryCell" rowHeight="55" id="xOV-nt-fbn">
@@ -177,6 +180,10 @@
                                                         <constraint firstAttribute="width" constant="30" id="koh-iC-bb9"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view tag="14" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ab5-CP-ZDl" userLabel="Border View">
+                                                    <rect key="frame" x="26" y="17" width="30" height="20"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
                                                 <button opaque="NO" userInteractionEnabled="NO" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cWe-Wx-sX7" userLabel="Flag name">
                                                     <rect key="frame" x="74" y="0.0" width="246" height="54.5"/>
                                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
@@ -196,12 +203,36 @@
                                             <constraints>
                                                 <constraint firstItem="Am5-Mr-KWP" firstAttribute="leading" secondItem="dWv-v8-Zgt" secondAttribute="leading" constant="26" id="AwT-ZC-VcO"/>
                                                 <constraint firstItem="kbn-tn-Sai" firstAttribute="centerY" secondItem="dWv-v8-Zgt" secondAttribute="centerY" id="D4u-e5-Ng6"/>
+                                                <constraint firstItem="ab5-CP-ZDl" firstAttribute="leading" secondItem="Am5-Mr-KWP" secondAttribute="leading" id="FjV-KC-Mvb"/>
                                                 <constraint firstItem="Am5-Mr-KWP" firstAttribute="centerY" secondItem="dWv-v8-Zgt" secondAttribute="centerY" id="H8G-ai-jsu"/>
                                                 <constraint firstAttribute="trailing" secondItem="kbn-tn-Sai" secondAttribute="trailing" constant="22" id="Ptc-F6-rfB"/>
                                                 <constraint firstAttribute="bottom" secondItem="cWe-Wx-sX7" secondAttribute="bottom" id="Qso-OE-bWa"/>
                                                 <constraint firstItem="cWe-Wx-sX7" firstAttribute="top" secondItem="dWv-v8-Zgt" secondAttribute="top" id="ihF-m6-voY"/>
                                                 <constraint firstAttribute="trailing" secondItem="cWe-Wx-sX7" secondAttribute="trailing" id="kLx-f7-3Yr"/>
+                                                <constraint firstItem="ab5-CP-ZDl" firstAttribute="centerY" secondItem="Am5-Mr-KWP" secondAttribute="centerY" id="oEe-jQ-3mL"/>
                                                 <constraint firstItem="cWe-Wx-sX7" firstAttribute="leading" secondItem="Am5-Mr-KWP" secondAttribute="trailing" constant="18" id="ti6-9x-bk5"/>
+                                                <constraint firstItem="ab5-CP-ZDl" firstAttribute="trailing" secondItem="Am5-Mr-KWP" secondAttribute="trailing" id="uRj-gi-wft"/>
+                                                <constraint firstItem="ab5-CP-ZDl" firstAttribute="height" secondItem="Am5-Mr-KWP" secondAttribute="height" multiplier="0.666" id="xVM-7B-cv8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoResultsCell" id="2h4-yc-iCy">
+                                        <rect key="frame" x="0.0" y="83" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2h4-yc-iCy" id="TLB-zL-NMq">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No matching results" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qnJ-GF-SDC">
+                                                    <rect key="frame" x="85.5" y="11.5" width="149" height="21"/>
+                                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qnJ-GF-SDC" firstAttribute="centerY" secondItem="TLB-zL-NMq" secondAttribute="centerY" id="DoX-cO-iI3"/>
+                                                <constraint firstItem="qnJ-GF-SDC" firstAttribute="centerX" secondItem="TLB-zL-NMq" secondAttribute="centerX" id="xGs-gp-S51"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -214,8 +245,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Gjm-z1-S9r" firstAttribute="top" secondItem="1lO-Hz-BmO" secondAttribute="top" id="MIN-hq-byk"/>
-                            <constraint firstItem="O5h-mu-dr0" firstAttribute="top" secondItem="Gjm-z1-S9r" secondAttribute="bottom" id="Ugj-Q7-pwI"/>
+                            <constraint firstItem="Gjm-z1-S9r" firstAttribute="top" secondItem="1lO-Hz-BmO" secondAttribute="top" constant="5" id="MIN-hq-byk"/>
+                            <constraint firstItem="O5h-mu-dr0" firstAttribute="top" secondItem="Gjm-z1-S9r" secondAttribute="bottom" constant="5" id="Ugj-Q7-pwI"/>
                             <constraint firstItem="1lO-Hz-BmO" firstAttribute="trailing" secondItem="Gjm-z1-S9r" secondAttribute="trailing" constant="20" id="eOs-lC-L2J"/>
                             <constraint firstItem="1lO-Hz-BmO" firstAttribute="bottom" secondItem="O5h-mu-dr0" secondAttribute="bottom" id="foq-Sq-WNS"/>
                             <constraint firstItem="Gjm-z1-S9r" firstAttribute="leading" secondItem="1lO-Hz-BmO" secondAttribute="leading" constant="20" id="hv4-d0-h5Q"/>
@@ -226,6 +257,8 @@
                     </view>
                     <connections>
                         <outlet property="countryTableView" destination="O5h-mu-dr0" id="RTv-1j-p50"/>
+                        <outlet property="countryTableViewBottomConstraint" destination="foq-Sq-WNS" id="kys-lx-5RM"/>
+                        <outlet property="searchTextField" destination="Gjm-z1-S9r" id="0h4-tc-Sbk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cj7-tW-iuv" userLabel="First Responder" sceneMemberID="firstResponder"/>
