--- a/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
+++ b/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
@@ -703,7 +703,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIn-iR-Na7">
-                                <rect key="frame" x="0.0" y="64" width="320" height="736"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="780"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V9c-TK-nDS" userLabel="Container View">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="822"/>
@@ -967,7 +967,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wJ7-ed-PCA" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4209.6000000000004" y="57.571214392803604"/>
+            <point key="canvasLocation" x="3525" y="58"/>
         </scene>
         <!--Date And Time View Controller-->
         <scene sceneID="iEv-Sg-pVB">
@@ -1035,25 +1035,73 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc8-wO-q5E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4909.6000000000004" y="58.020989505247378"/>
+            <point key="canvasLocation" x="3526" y="806"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="FB2-LJ-gy2">
+        <!--Welcome View Controller-->
+        <scene sceneID="xrW-L8-LKj">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NIa-5b-fze" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RL0-OC-Bcq">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
+                <viewController storyboardIdentifier="WelcomeViewController" id="9kz-Qi-MBF" customClass="WelcomeViewController" customModule="SpiralPay" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kze-4z-Q6G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxs-UH-EJw" customClass="SpiralPayButton" customModule="SpiralPay" customModuleProvider="target">
+                                <rect key="frame" x="32.5" y="583" width="310" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Kxs-UH-EJw" secondAttribute="height" multiplier="310:52" id="IAD-8Y-8f2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
+                                <state key="normal" title="Add card" backgroundImage="buttonBlueBackground"/>
+                                <connections>
+                                    <action selector="addCardButtonTapped" destination="9kz-Qi-MBF" eventType="touchUpInside" id="829-iC-7Lh"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome. You are now onboard!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sh7-2W-XPo">
+                                <rect key="frame" x="74" y="323.5" width="227" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="227" id="UiH-g5-tcS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJU-gc-eaz">
+                                <rect key="frame" x="74" y="270" width="32" height="38.5"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTm-CF-MPc">
+                                <rect key="frame" x="116" y="270" width="185" height="38.5"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="FTm-CF-MPc" firstAttribute="leading" secondItem="qJU-gc-eaz" secondAttribute="trailing" constant="10" id="1Gj-tL-Mha"/>
+                            <constraint firstItem="sh7-2W-XPo" firstAttribute="centerY" secondItem="Kze-4z-Q6G" secondAttribute="centerY" id="44P-2v-N06"/>
+                            <constraint firstItem="sh7-2W-XPo" firstAttribute="centerX" secondItem="Kze-4z-Q6G" secondAttribute="centerX" id="6dE-Nb-y0s"/>
+                            <constraint firstItem="Obe-zZ-Toj" firstAttribute="bottom" secondItem="Kxs-UH-EJw" secondAttribute="bottom" constant="32" id="Bbd-4h-JkK"/>
+                            <constraint firstItem="sh7-2W-XPo" firstAttribute="top" secondItem="qJU-gc-eaz" secondAttribute="bottom" constant="15" id="EMu-u9-km8"/>
+                            <constraint firstItem="Kxs-UH-EJw" firstAttribute="width" secondItem="Kze-4z-Q6G" secondAttribute="width" multiplier="0.826" id="UHy-CP-Adg"/>
+                            <constraint firstItem="FTm-CF-MPc" firstAttribute="trailing" secondItem="sh7-2W-XPo" secondAttribute="trailing" id="WsU-w3-Q2s"/>
+                            <constraint firstItem="FTm-CF-MPc" firstAttribute="centerY" secondItem="qJU-gc-eaz" secondAttribute="centerY" id="ZsA-MW-Lg7"/>
+                            <constraint firstItem="Kxs-UH-EJw" firstAttribute="centerX" secondItem="Obe-zZ-Toj" secondAttribute="centerX" id="iXi-dg-bLW"/>
+                            <constraint firstItem="qJU-gc-eaz" firstAttribute="leading" secondItem="sh7-2W-XPo" secondAttribute="leading" id="kUD-AP-Wwy"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Obe-zZ-Toj"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YTa-PZ-J6t"/>
                     <connections>
-                        <segue destination="w53-Op-FHp" kind="relationship" relationship="rootViewController" id="kj4-IW-OCs"/>
+                        <outlet property="addCardButton" destination="Kxs-UH-EJw" id="jxg-Bm-OlG"/>
+                        <outlet property="nameLabel" destination="FTm-CF-MPc" id="ZZN-3Y-WDV"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oAu-gW-Lce" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Fd-AX-RY9" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3870.4000000000001" y="57.571214392803604"/>
+            <point key="canvasLocation" x="4278" y="64"/>
         </scene>
     </scenes>
     <resources>
